tests/typing/pass/smtlib/v2.7/reset/test.smt2
(set-logic LIA)
(reset)
(assert true)
(check-sat)
